[gd_scene load_steps=2 format=3 uid="uid://bo6ksr4ohl41l"]

[ext_resource type="Script" path="res://Fazes/MenuPrincipal/menu_principal.gd" id="1_86tcd"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86tcd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Jogar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Jogar
"

[node name="Opções" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Opções
"

[node name="Sair" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Opções" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
